closes #15 change colour scheme and also fixed some spacing issues

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
-  background: #3C3744;
-  padding: 40px;
+  background: #485755;
+  padding: 100px;
   color: #FFF;
   img {
     display: block;
@@ -9,6 +9,7 @@
     border: 3px solid #FFF;
   }
   .profile p {
+    margin: 0;
     padding: 20px 0 0 0;
     font-size: 1.25em;
     text-align: center;
