--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,10 +1,11 @@
 .technologies {
-  padding: 40px 0 40px 0;
+  padding: 100px;
   text-align: center;
-  background: #3ec303;
+  background: #45CC45;
   color: #FFF;
   h2 {
     font-weight: 600;
+    padding: 0 0 20px 0;
   }
   img {
     height: 100px;
