--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -1,7 +1,7 @@
 .jumbotron {
-  padding-top: 20px;
-  padding-bottom: 10px;
-  background: #0092D7;
+  margin: 0;
+  padding: 100px;
+  background: #4592CC;
   color: #FFF;
   text-align: center;
   background: #0092D7;
@@ -12,6 +12,7 @@
   p {
     padding-top: 20px;
     padding-bottom: 10px;
+    margin: 0;
   }
 
   .jumbotron__content {
